[package]
name = "near-defuse-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
clickhouse = {version = "0.13.0", features = ["rustls-tls"] }
serde = "1.0.106"
serde_json = "1.0.55"
futures = "0.3.5"
itertools = "0.10.3"
tokio = { version = "1.1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
near-lake-framework = "0.7.9"
anyhow = "1.0.51"
regex = "1.5.4"
once_cell = "1.8.0"

[dev-dependencies]
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread", "full", "test-util"] }
serde = { version = "1.0.106", features = ["derive"] }
clickhouse = { version = "0.13.0", features = ["test-util"] }

