[package]
name = "near-gcp-pubsub-writer"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
futures = "0.3.5"
itertools = "0.9.0"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

google-cloud-googleapis = { version = "0.13.0", features = ["pubsub"]}
google-cloud-pubsub = "0.25.0"
near-lake-framework = "0.7.0"